--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,12 @@ services:
     build:
       context: ./skillchain-frontend
       dockerfile: Dockerfile
-    container_name: skillchain-frontend
     ports:
       - "3000:80"
     depends_on:
       - backend
+    environment:
+      - REACT_APP_API_URL=http://backend:3001/api
     networks:
       - skillchain-network
     restart: unless-stopped
@@ -20,28 +21,25 @@ services:
     build:
       context: ./skillchain-backend
       dockerfile: Dockerfile
-    container_name: skillchain-backend
     ports:
       - "3001:3001"
     depends_on:
-      - postgres
+      - db
     environment:
       - NODE_ENV=production
       - PORT=3001
-      - DB_USER=postgres
-      - DB_HOST=postgres
-      - DB_NAME=skillchain
-      - DB_PASSWORD=postgres
+      - DB_HOST=db
       - DB_PORT=5432
-      - CORS_ORIGIN=*
+      - DB_NAME=skillchain
+      - DB_USER=postgres
+      - DB_PASSWORD=postgres
     networks:
       - skillchain-network
     restart: unless-stopped
 
-  # PostgreSQL database
-  postgres:
+  # Database service
+  db:
     image: postgres:14
-    container_name: skillchain-postgres
     ports:
       - "5432:5432"
     environment:
